--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
     "react-dom": "^18.2.0",
